--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "cartalyst/data-grid",
+	"name": "mezuky04/cartalyst-data-grid",
 	"description": "HTML markup templating on the client side, simple API on the server side. Incredibly simple and easy to use.",
 	"keywords": [
 		"php",
